<resources>
    <string name="app_name">Lite Up</string>
    <string name="addFoodName">Enter Food Name</string>
    <string name="addFoodPrice">Enter Food Price</string>
    <string name="ChooseImage">Choose Image</string>
    <string name="BtnAddFood">Add Food</string>
    <string name="btnFoodList">Food List</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="signup">Signup</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="view_profile">View Profile</string>
    <string name="empty_list_text">List is Empty</string>
    <string name="enter_title">Enter Name</string>
    <string name="enter_desc">Enter Email</string>
    <string name="add_record">ADD RESTAURANT</string>
    <string name="btn_delete">DELETE</string>
    <string name="btn_update">UPDATE</string>
    <string name="enter_rastaurant">enter_rastaurant</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone">Enter Phone Number</string>
    <string name="update_phone">Enter Phone Number</string>
    <string name="update_name">Enter Name</string>
    <string name="update_email">Enter Email</string>
    <string name="update_address">Enter Address</string>

</resources>
