<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/back">

    <EditText
        android:id="@+id/rastaurant_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/back"
        android:ems="10"
        android:hint="@string/update_name"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/back"
        android:ems="10"
        android:hint="@string/update_email"
        android:textSize="22sp"></EditText>

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:background="@color/back"
        android:ems="10"
        android:hint="@string/update_address"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:background="@color/back"
        android:ems="10"
        android:hint="@string/update_phone"
        android:inputType="number"
        android:textSize="22sp" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button1"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button"
            android:text="@string/btn_delete" />
    </LinearLayout>

</LinearLayout>