<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    tools:context=".SignupActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/signup" />

    <EditText
        android:id="@+id/editTextFullname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/fullname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:textSize="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:textSize="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />


    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextConfirm"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:text="@string/signup"
            android:textSize="16dp" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/red"
            android:text="@string/cancel"
            android:textSize="16dp" />
    </LinearLayout>

        <Button
        android:id="@+id/btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Button" />


</LinearLayout>