<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/back"
    tools:context = ".AddRestaurantActivity"
    xmlns:tools = "http://schemas.android.com/tools">

    <EditText
        android:id="@+id/rastaurant_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/back"
        android:ems="10"
        android:hint="@string/enter_title"
        android:importantForAutofill="no"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:textColor="@android:color/black">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/back"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/address_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/back"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="text"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:background="@color/back"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/add_record"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/button"
        android:text="@string/add_record"
        android:textColor="@android:color/white" />

</LinearLayout>