<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_marginTop="100dp"
         />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:text="@string/log_in"
        android:textSize="20dp" />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/button"
        android:text="@string/signup"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tvAdminLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="log In as an Admin"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No of attempts remainning :"
        android:textColor="#ffffff"
        android:textSize="16sp" />


</LinearLayout>