<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center_horizontal"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:hint="ID" />

    <TextView
        android:id="@+id/textViewFullname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/fullname" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/username" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:hint="@string/email" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="64dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="@drawable/red"
            android:text="Delete Profile" />
    </LinearLayout>

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="Update Profile" />


</LinearLayout>